--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    
+    <div class="container"> </div>  
+    <button>Reset</button>  
+    <p id="rangeValue"></p>
+    <input type="range" id="range" value='16' min="1.0" max="100.0" step="1" />
 </body>
 </html>
