--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <button>Reset</button>  
     <p id="rangeValue"></p>
     <input type="range" id="range" value='16' min="1.0" max="100.0" step="1" />
+    <div class="break"></div>
+    <label for="colorpicker">Color Picker:</label>
+    <input type="color" id="colorpicker" value="#0000ff">
 </body>
 </html>
